fix: remove redundant spacing

--- a/src/components/transport/Transport.css
+++ b/src/components/transport/Transport.css
@@ -2,5 +2,4 @@
   display: flex;
   align-items: stretch;
   justify-content: center;
-  padding: .5rem;
 }
